# k8s-leader-election-demo

./: Dockerfile  README.md  pyproject.toml
k8s/: deployment.yaml  kustomization.yaml  rbac.yaml  service-account.yaml  service.yaml
src/leader_election/: k8s_lease.py  web.py
