[project]
name = "leader-election"
version = "0.1.0"
description = "Demo Leader Election with a Kubernetes Lease Object"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "granian>=1.6.3",
    "kubernetes>=31.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.387",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[tool.ruff.lint]
ignore = ["E401"]
